--- a/roles/minecraft/tasks/stop_minecraft.yaml
+++ b/roles/minecraft/tasks/stop_minecraft.yaml
@@ -1,11 +1,13 @@
 - name: Check if Server Exists
   ansible.builtin.stat:
-    path: ~/.config/systemd/user/{{ minecraft_settings.modpack }}.service
+    path: /etc/systemd/system/{{ minecraft_settings.modpack }}.service
   register: server_exists
 - name: Stop Server
   ansible.builtin.systemd_service:
     name: '{{ minecraft_settings.modpack }}'
     state: stopped
     enabled: false
-    scope: user
+  become: true
+  become_method: su
+  become_exe: sudo su -
   when: server_exists.stat.exists == true
